Fix footer spacing for about me page

--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -44,7 +44,7 @@ h3 {
   position:relative;
 }
 
-#content {
+#about-me-content {
   padding-bottom: 3em;
 }
 
@@ -53,6 +53,7 @@ h3 {
   padding-left: 1em;
   font-family: 'Roboto Condensed', sans-serif;
   position: absolute;
+  bottom: 0;
   left: 0;
   right: 0;
 }
